<resources>
    <string name="app_name">High Rollers Den</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profil</string>
    <string name="bet">Fogadás</string>
    <string name="history">Előzmények</string>
    <string name="statistics">Statisztikák</string>
    <string name="high_rollers_den">High Rollers Den</string>
    <string name="egyenleg">Egyenleg:</string>
    <string name="odds">0.0</string>
    <string name="eredo_odds">Eredő odds: 0.0</string>
    <string name="wager">Tét:</string>
    <string name="Name">Név</string>
    <string name="Username">Felhasználónév</string>
    <string name="Email">Email</string>
    <string name="Lakhely">Lakhely</string>
    <string name="id_card">Személyi szám</string>
    <string name="username_detail">Felhasználónév:</string>
    <string name="id_card_detail">Személyi szám:</string>
    <string name="email_detail">Email:</string>
    <string name="lakhely_detail">Lakhely:</string>
    <string name="name_main">Név:</string>
    <string name="balance_main">Egyenleg:</string>
    <string name="all_time">All Time</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="result">X</string>
    <string name="wagered_amount">Tét:</string>
    <string name="odds_wagered">0.0</string>
    <string name="date_wagered">2023-11-14</string>
    <string name="possible_winnings">Várható nyeremény:</string>
    <string name="possible_winnings_amount">0.0</string>
    <string name="date_match">Dátum</string>
    <string name="home_odds">1</string>
    <string name="draw_odds">X</string>
    <string name="away_odds">2</string>
    <string name="betslip">Betslip</string>
    <string name="toolbar">Toolbar</string>
    <string name="eb">Európa Bajnokság</string>
    <string name="vb_afr">VB Selejtező Afrika</string>
    <string name="vb_eu">VB Selejtező Európa</string>
    <string name="pl">Premier League</string>
    <string name="seriea">Serie A</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue1">Ligue 1</string>
    <string name="laliga">La Liga</string>
</resources>