<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <Button
        android:id="@+id/details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:gravity="left|center_vertical"
        />

    <TextView
        android:id="@+id/wager_text"
        android:layout_width="35dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/details"
        android:layout_marginLeft="10dp"
        android:text="@string/wagered_amount"
        android:textSize="20dp"
        android:gravity="left|center_vertical"
        />

    <TextView
        android:id="@+id/wager"
        android:layout_width="185dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/wager_text"
        android:layout_marginLeft="5dp"
        android:text="@string/odds_wagered"
        android:textColor="#0000FF"
        android:textSize="20dp"
        android:gravity="left|center_vertical"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="110dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:text="@string/date_wagered"
        android:textSize="20dp"
        android:gravity="right|center_vertical"
        />

    <TextView
        android:id="@+id/winnable_text"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/details"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:text="@string/possible_winnings"
        android:textSize="20dp"
        android:gravity="left|center_vertical"
        />

    <TextView
        android:id="@+id/winnable"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/details"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:text="@string/possible_winnings_amount"
        android:textColor="#FF0000"
        android:textSize="20dp"
        android:gravity="right|center_vertical"
        />

</androidx.constraintlayout.widget.ConstraintLayout>