<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/balance"
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="40dp"
        android:text="@string/egyenleg" />

    <TextView
        android:id="@+id/balance_amount"
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/balance"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="30dp"
        android:textColor="#FF0000"
        android:text="@string/odds" />

    <View
        android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
    android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/balance"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:textSize="30dp"
        android:gravity="right"
        android:textColor="#0000FF"
        android:text="@string/eredo_odds" />

    <TextView
        android:id="@+id/wager"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sum"
        app:layout_constraintLeft_toLeftOf="@id/balance"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:textSize="30dp"
        android:text="@string/wager"/>

    <EditText
        android:id="@+id/etWager"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/sum"
        app:layout_constraintLeft_toRightOf="@id/wager"/>





</androidx.constraintlayout.widget.ConstraintLayout>