<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.bme.aut.android.highrollersden.MainActivity">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chartHoliday"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:context="hu.bme.aut.android.highrollersden.MainActivity">
    <Button
        android:id="@+id/btnAllTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_time"
        android:layout_gravity="center"
        android:layout_marginRight="50dp"/>

        <Button
            android:id="@+id/btnWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_week"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btnMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_month"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>