<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">


    <TextView
        android:id="@+id/matches"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:gravity="center"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matches"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="34dp"
        android:src="@drawable/bet"
        />

    <ImageView
        android:id="@+id/away_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matches"
        android:layout_marginTop="5dp"
        android:layout_marginRight="34dp"
        android:src="@drawable/bet"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/matches"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/date_match"
        android:textSize="15dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/home_name_team"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/home_logo"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15dp"
        android:gravity="center|left"
        />

    <TextView
        android:id="@+id/away_name_team"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/home_logo"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="15dp"
        android:gravity="center|right"
        />

    <Button
        android:id="@+id/odds_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/draw_odds"
        />

    <Button
        android:id="@+id/odds_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/home_odds"
        />

    <Button
        android:id="@+id/odds_away"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/away_odds"
        />
</androidx.constraintlayout.widget.ConstraintLayout>